RESOLVED FIXED58382
Infinite recursion in WebHTMLView executeSavedKeypressCommands
https://bugs.webkit.org/show_bug.cgi?id=58382
Summary Infinite recursion in WebHTMLView executeSavedKeypressCommands
Enrica Casucci
Reported 2011-04-12 15:06:44 PDT
Execution of some editing commands could trigger a call to selectedRange that internally calls executeSavedKeypressCommands creating an infinite recursion.
Attachments
Patch (5.70 KB, patch)
2011-04-12 15:12 PDT, Enrica Casucci
ap: review+
Enrica Casucci
Comment 1 2011-04-12 15:06:57 PDT
Enrica Casucci
Comment 2 2011-04-12 15:12:39 PDT
Alexey Proskuryakov
Comment 3 2011-04-12 15:34:42 PDT
Comment on attachment 89281 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=89281&action=review > Source/WebKit2/UIProcess/API/mac/WKView.mm:1183 > + // We could be called again if the execution of one command triggers a call to selectedRange. I would add: "In this case, the state is up to date, and we don't need to execute any more saved commands to return a result"
Enrica Casucci
Comment 4 2011-04-12 15:42:55 PDT
(In reply to comment #3) > (From update of attachment 89281 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=89281&action=review > > > Source/WebKit2/UIProcess/API/mac/WKView.mm:1183 > > + // We could be called again if the execution of one command triggers a call to selectedRange. > > I would add: "In this case, the state is up to date, and we don't need to execute any more saved commands to return a result" Will do. thank you!
Enrica Casucci
Comment 5 2011-04-12 15:49:30 PDT
Note You need to log in before you can comment on or make changes to this bug.