Infinite recursion in WebHTMLView executeSavedKeypressCommands. https://bugs.webkit.org/show_bug.cgi?id=58382 <rdar://problem/9239370>

Reviewed by Alexey Proskuryakov.

Execution of some editing commands could trigger a call to selectedRange that
internally calls executeSavedKeypressCommands creating an infinite recursion.

Source/WebKit/mac:

* WebView/WebHTMLView.mm:
(-[WebHTMLView _executeSavedKeypressCommands]): Added a flag to avoid recursion.
(-[WebHTMLView _interpretKeyEvent:savingCommands:]): Added flag initialization.

Source/WebKit2:

* UIProcess/API/mac/WKView.mm:
(-[WKView _executeSavedKeypressCommands]): Added flag to avoid recursion.
(-[WKView _interpretKeyEvent:withCachedTextInputState:savingCommandsTo:WebCore::]):
Added flag initialization.



Canonical link: https://commits.webkit.org/73415@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83655 268f45cc-cd09-0410-ab3c-d52691b4dbfc